# HWInterfaceDaemon

./: .gitignore  CMakeLists.txt  Pinout Sheet.xlsx  README.md  config.json
CMakeModules/: FindBCM2835.cmake
src/: Daemon.h  Deamon.cpp  Encoder.cpp  Encoder.h  HWIDConfig.cpp  HWIDConfig.h  InputDevice.cpp  InputDevice.h  Main.cpp  Switch.cpp  Switch.h
